tests/let.chg.stderr
type error: i64 is not assignable to i32

    let y: i32 = 1i64;
    ^^^^^^^^^^^^^^^^^^
